tests/cases/ok/pkgdemo/math/ops.p4
def square(x: int) -> int:
    return x * x

def shift(x: int) -> int:
    return x + 3
