tests/cases/fail/module_qualified_calls_helpers.p4
def twice(x: int) -> int:
    return x + x

def twice(x: float) -> float:
    return x + x
